required for checkboxes

--- a/index.html
+++ b/index.html
@@ -117,17 +117,17 @@
                     <table width="100%" border="0" cellpadding="10" style="background-color: #f2fbfc; border-radius: 6px;">
                         <tr>
                             <td>
-                                <input type="checkbox" name="" id="1"> <label for="1">Form-138 (High School Grades)</label><br> 
-                                <input type="checkbox" name="" id="2"> <label for="2">Form-137</label><br>
-                                <input type="checkbox" name="" id="3"> <label for="3">Birth Certificate</label><br>
-                                <input type="checkbox" name="" id="4"> <label for="4">Good Moral Certificate</label><br>
-                                <input type="checkbox" name="" id="5"> <label for="5">Certificate of Transfer Credentials</label>
+                                <input type="checkbox" name="" id="1" required> <label for="1">Form-138 (High School Grades)</label><br> 
+                                <input type="checkbox" name="" id="2" required> <label for="2">Form-137</label><br>
+                                <input type="checkbox" name="" id="3" required> <label for="3">Birth Certificate</label><br>
+                                <input type="checkbox" name="" id="4" required> <label for="4">Good Moral Certificate</label><br>
+                                <input type="checkbox" name="" id="5" required> <label for="5">Certificate of Transfer Credentials</label>
                             </td>
                             <td>
-                                <input type="checkbox" name="" id="6"> <label for="6">Transcript Of Records</label><br>
-                                <input type="checkbox" name="" id="7"> <label for="7">Summer Permit / Permit to Cross Enroll </label><br>
-                                <input type="checkbox" name="" id="8"> <label for="8">Picture</label><br>
-                                <input type="checkbox" name="" id="9"> <label for="9">PSA / NSO</label>
+                                <input type="checkbox" name="" id="6" required> <label for="6">Transcript Of Records</label><br>
+                                <input type="checkbox" name="" id="7" required> <label for="7">Summer Permit / Permit to Cross Enroll </label><br>
+                                <input type="checkbox" name="" id="8" required> <label for="8">Picture</label><br>
+                                <input type="checkbox" name="" id="9" required> <label for="9">PSA / NSO</label>
                             </td>
                         </tr>
                     </table>
@@ -145,3 +145,4 @@
 
 </body>
 </html>
+
